--- a/CNN Project/GlassesOrNoGlassse.ipynb
+++ b/CNN Project/GlassesOrNoGlassse.ipynb
@@ -338,9 +338,9 @@
     "result = cnn.predict(test_image)\n",
     "training_set.class_indices\n",
     "if result[0][0] == 1:\n",
-    "    prediction = 'glasses'\n",
+    "    prediction = 'no glasses'\n",
     "else:\n",
-    "    prediction = 'no glasses'"
+    "    prediction = 'glasses'"
    ]
   },
   {
@@ -351,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "'no glasses'"
+       "'glasses'"
       ]
      },
      "execution_count": 15,
